--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -41,6 +41,7 @@ jobs:
 
             - name: Install prerequisites for Test
               run: |
+                  sudo apt-get update
                   sudo apt-get install linux-tools-common linux-tools-generic linux-tools-`uname -r`
                   sudo apt-get install gfortran libopenblas-dev liblapack-dev
                   sudo sh -c 'echo -1 >/proc/sys/kernel/perf_event_paranoid'
