--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -186,6 +186,7 @@ jobs:
             - name: Install prerequisites
               if: matrix.os == 'ubuntu-latest'
               run: |
+                  sudo apt-get update
                   sudo apt-get install linux-tools-common linux-tools-generic linux-tools-`uname -r`
                   sudo sh -c 'echo -1 >/proc/sys/kernel/perf_event_paranoid'
 
