--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ global-include *.pxi
 global-include *.h
 global-include *.cpp
 global-include *.cu
+global-include meson.build
 
 global-exclude *.py[cod] __pycache__
 global-exclude *.so *.dll *.dylib
@@ -38,6 +39,10 @@ recursive-include tests *.txt
 recursive-exclude tests *.svg
 recursive-exclude tests *.pdf
 
+recursive-include tools *.sh
+recursive-include tools *.yml
+
+include *.star
 include CHANGELOG.rst
 include README.rst
 include AUTHORS.txt
