--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -27,13 +27,13 @@ jobs:
                   python-version: ${{ matrix.python-version }}
 
             # Install BLAS, since pypy compiles numpy and scipy from source and requires BLAS.
-            - name: Install prerequisites
-              run: sudo apt-get install gfortran libopenblas-dev liblapack-dev
+            # - name: Install prerequisites
+            #   run: sudo apt-get install gfortran libopenblas-dev liblapack-dev
 
             - name: Install package and dependencies (CPython)
               run: |
                   python -m pip install --upgrade pip
-                  python -m pip install --upgrade . -vvv
+                  python -m pip install . -vvv
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
