--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -45,7 +45,7 @@ jobs:
             - name: Install package and dependencies
               run: |
                   python -m pip install --upgrade pip
-                  python -m pip install --upgrade . -vvv
+                  python -m pip install . -vvv
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
