--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -17,13 +17,13 @@ jobs:
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
                 python-version: ['cp39', 'cp310', 'cp311', 'cp312', 'pp38', 'pp39', 'pp310']
-                exclude:
-                    - os: windows-latest
-                      python-version: 'pp38'
-                    - os: windows-latest
-                      python-version: 'pp39'
-                    - os: windows-latest
-                      python-version: 'pp310'
+                # exclude:
+                #     - os: windows-latest
+                #       python-version: 'pp38'
+                #     - os: windows-latest
+                #       python-version: 'pp39'
+                #     - os: windows-latest
+                #       python-version: 'pp310'
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -69,7 +69,7 @@ jobs:
               env:
                   CIBW_ARCHS_WINDOWS: "AMD64 x86 ARM64"
                   CIBW_BUILD: "${{ matrix.python-version }}-win_amd64 ${{ matrix.python-version }}-win_arm64"
-                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
+                  CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0"
                   CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
