--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -42,6 +42,15 @@ jobs:
                   ln -s /usr/local/opt/libomp/lib/libomp.a /usr/local/lib/libomp.a
                   ln -s /usr/local/opt/libomp/lib/libomp.dylib /usr/local/lib/libomp.dylib
 
+            # Install OpenBLAS when PyPy is used, since it tries to compile numpy and scipt from
+            # source, whic needs OpenBLAS
+            - name: Install package and dependencies (OpenBLAS, gfortran)
+              if: (contains(matrix.python-version, 'pypy'))
+              run: |
+                  brew install openblas
+                  brew install libomp
+                  brew reinstall gcc
+
             - name: Install package and dependencies (not PyPy)
               if: (!contains(matrix.python-version, 'pypy'))
               run: |
