--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -15,8 +15,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                # os: [ubuntu-latest, windows-latest, macos-latest]  # TEST
-                os: [windows-latest]
+                os: [ubuntu-latest, windows-latest, macos-latest]
                 python-version: ['cp39', 'cp310', 'cp311', 'cp312', 'pp38', 'pp39', 'pp310']
         steps:
             - name: Checkout
