--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -1,9 +1,9 @@
 name: deploy-pypi
 
 on:
-    push:
-        branches:
-            - main
+    # push:
+    #     branches:
+    #         - main
     release:
         types:
             - published
@@ -119,8 +119,9 @@ jobs:
 
             # Upload all wheels to an artifact
             - name: Upload artifacts
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
+                  name: artifacts-wheel-${{ matrix.os }}-${{ matrix.python-version }}
                   path: ./wheelhouse/*.whl
                   retention-days: 1
 
@@ -142,8 +143,9 @@ jobs:
                 python -m build . --sdist
             
             - name: Upload artifacts
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
+                  name: artifacts-sdist
                   path: dist/*.tar.gz
                   retention-days: 1
 
@@ -158,9 +160,10 @@ jobs:
         # if: github.event_name == 'release' && github.event.action == 'published'
         steps:
             - name: Download artifacts
-              uses: actions/download-artifact@v3
+              uses: actions/download-artifact@v4
               with:
-                  name: artifact
+                  pattern: artifacts-*
+                  merge-multiple: true
                   path: dist
 
             - name: Upload to PyPi
@@ -203,7 +206,6 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install pytest-cov
-                  python -m pip install cython
                   python -m pip install --prefer-binary --upgrade detkit
 
             # This does not install plot packages (matplotlib, seaborn) when
