--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -53,6 +53,7 @@ pypi_build_wheels_macosx_arm64_task:
     # supplied by isuruf.
     # Find out SDKROOT via `xcrun --sdk macosx --show-sdk-path`
     CIBW_ENVIRONMENT_MACOS: >
+      SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
       LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
       CFLAGS="-I/opt/homebrew/opt/libomp/include $CFLAGS"
       CXXFLAGS="-I/opt/homebrew/opt/libomp/include $CXXFLAGS"
