--- a/tools/ci/cirrus_deploy_conda_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_conda_macosx_arm64.yml
@@ -41,14 +41,11 @@ conda_build_wheels_macosx_arm64_task:
         CIBW_BUILD: "cp312-macosx_arm64"
   env:
     PATH: /opt/homebrew/opt/python@3.10/bin:/usr/local/lib:/usr/local/include:$PATH
+    # SDKROOT needs to be set for repackaged conda-forge gfortran compilers
+    SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
     # Specifying CIBW_ENVIRONMENT_MACOS overrides pyproject.toml, so include
     # all the settings from there, otherwise they're lost.
-    # SDKROOT needs to be set for repackaged conda-forge gfortran compilers
-    # supplied by isuruf.
-    # Find out SDKROOT via `xcrun --sdk macosx --show-sdk-path`
     CIBW_ENVIRONMENT_MACOS: >
-      # SDKROOT=/Applications/Xcode-15.1.0.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX14.2.sdk
-      SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
       LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
       CFLAGS="-I/opt/homebrew/opt/libomp/include $CFLAGS"
       CXXFLAGS="-I/opt/homebrew/opt/libomp/include $CXXFLAGS"
@@ -65,7 +62,9 @@ conda_build_wheels_macosx_arm64_task:
     # CIBW_BUILD: "*-macosx_arm64"
     CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
     CIBW_BUILD_VERBOSITY: "3"
-    CIBW_BEFORE_BUILD: "pip install delocate; brew install libomp"
+    CIBW_BEFORE_BUILD: >
+      pip install delocate;
+      brew install libomp;
     CIBW_TEST_SKIP: "*_universal2:arm64"
 
   build_script:
