--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -48,7 +48,7 @@ pypi_build_wheels_macosx_arm64_task:
   env:
     PATH: /opt/homebrew/opt/python@3.10/bin:/usr/local/lib:/usr/local/include:$PATH
     # SDKROOT needs to be set for repackaged conda-forge gfortran compilers
-    SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
+    SDKROOT=`xcrun --sdk macosx --show-sdk-path`
     # Specifying CIBW_ENVIRONMENT_MACOS overrides pyproject.toml, so include
     # all the settings from there, otherwise they're lost.
     CIBW_ENVIRONMENT_MACOS: >
