--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -74,7 +74,7 @@ pypi_build_wheels_macosx_arm64_task:
   build_script:
     - uname -m
     - brew install python@3.11
-    - sudo ln -s /opt/homebrew/opt/python@3.11/bin/python3.11 /usr/local/bin/python
+    - sudo ln -s /opt/homebrew/opt/python@3.11/bin/python3.11 /usr/bin/python
     - which python
     - python -c "import platform;print(platform.python_version());print(platform.system());print(platform.machine())"
     - clang --version
