--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools", "cython>=0.29"]
+requires = ["setuptools", "scipy>=1.5", "cython>=0.29"]
